The sum of Natural Number is done

--- a/Assignments/Week1/JavaScriptProgrammingChallenge/index.html
+++ b/Assignments/Week1/JavaScriptProgrammingChallenge/index.html
@@ -7,6 +7,8 @@
     <title>JavaScript Programming Challenge</title>
 </head>
 <body>
-    <a href="Factorial/factorial.html">Factorial of a number</a>
+    <a href = "Factorial/factorial.html">Factorial of a number</a>
+    <br>
+    <a href = "NaturalNumbersSum/naturalNumbersSum.html">Sum of Natural Numbers</a>
 </body>
 </html>
