The sum of multiples of 3 or 5 Natural Numbers is done

--- a/Assignments/Week1/JavaScriptProgrammingChallenge/index.html
+++ b/Assignments/Week1/JavaScriptProgrammingChallenge/index.html
@@ -10,5 +10,7 @@
     <a href = "Factorial/factorial.html">Factorial of a number</a>
     <br>
     <a href = "NaturalNumbersSum/naturalNumbersSum.html">Sum of Natural Numbers</a>
+    <br>
+    <a href = "SumOfMultiplesOf3or5/sumOfMultiplesOf3or5.html">Sum Of Multiples Of 3 or 5</a>
 </body>
 </html>
